fixed alignment

--- a/app/sass/core.scss
+++ b/app/sass/core.scss
@@ -114,7 +114,7 @@ a:hover {
 }
 
 
-#nav-plant2, #nav-flower {
+#nav-plant, #nav-plant2, #nav-flower {
   height: 6em;
 }
 
@@ -128,10 +128,12 @@ a:hover {
 
 #animations-nav {
   right: 30%;
+  text-align: center;
 }
 
 #blog-nav {
   right: 40%;
+  text-align: center;
 }
 
  body main {
